<resources>
    <string name="app_name">PayInTime</string>
    <string name="payintime">PayInTime</string>
    <string name="splash_description">Gerencie suas contas do mês para evitar surpresas e economizar!</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_conta">Não possui uma conta?</string>
    <string name="criar_conta">criar conta</string>
    <string name="nome">Nome</string>
    <string name="signup_description">Preencha os campos abaixo para se cadastrar!</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="exemplo_mes">Novembro</string>
    <string name="exemplo_ano">2021</string>
    <string name="valor_exemplo">R$ 123.456,78</string>
    <string name="salario_restante">Salário restante:</string>
    <string name="ja_pago">Já pago:</string>
    <string name="a_pagar">A pagar:</string>
    <string name="salario">Salário</string>
    <string name="contas_fixas">Contas Fixas</string>
    <string name="economia">Economia</string>
    <string name="salario_description">Para realizar cálculos sobre suas contas, Informe o seu salário líquido mensal</string>
    <string name="novo_salario">Novo salário</string>
    <string name="atualizar_salario">Atualizar salário</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="dia_do_vencimento">Dia do Vencimento</string>
    <string name="description_criar_conta">Cadastro de uma nova conta</string>
    <string name="setembro_2021">Setembro 2021</string>
    <string name="cadastrar_uma_conta">Cadastrar Conta</string>
    <string name="contas">Contas</string>
    <string name="_123">123</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contas_normais_tab">Normais</string>
    <string name="contas_fixas_tab">Fixas</string>
    <string name="resumo_tab">Resumo</string>
    <string name="sair">Sair</string>
    <string name="pendente">Pendente</string>
    <string name="paga">Paga</string>
    <string name="title_activity_editar_conta">EditarContaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="desc_edit_conta">Atualização de uma conta</string>
    <string name="atualizar_conta">Atualizar Conta</string>
    <string name="opcoes_para_esta_conta">Opções para esta conta</string>
    <string name="editar">Editar</string>
    <string name="apagar">Apagar</string>
</resources>