<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditarContaActivity">

    <Button
        android:id="@+id/btEditarConta"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:text="@string/atualizar_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDiaVencimentoContaEdit" />

    <EditText
        android:id="@+id/etDescContaEdit"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:focusable="true"
        android:hint="@string/descricao"
        android:inputType="text"
        android:maxLength="30"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivZoomFinance" />

    <EditText
        android:id="@+id/etValorContaEdit"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:focusable="true"
        android:hint="@string/valor"
        android:inputType="numberDecimal"
        android:maxLength="15"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescContaEdit" />

    <EditText
        android:id="@+id/etDiaVencimentoContaEdit"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:focusable="true"
        android:hint="@string/dia_do_vencimento"
        android:inputType="number"
        android:maxLength="2"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorContaEdit" />

    <TextView
        android:id="@+id/tvTitleDescEditConta"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/desc_edit_conta"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivZoomFinance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toEndOf="@+id/ivZoomFinance"
        app:layout_constraintTop_toTopOf="@+id/ivZoomFinance" />

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleEditarConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/setembro_2021"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <ImageView
        android:id="@+id/ivZoomFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleEditarConta"
        app:srcCompat="@drawable/figure_finance_notebook" />

</androidx.constraintlayout.widget.ConstraintLayout>