<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SalarioActivity">

    <Button
        android:id="@+id/btSalarioUpdate"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:onClick="atualizarSalario"
        android:text="@string/atualizar_salario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSalarioUpdate" />

    <EditText
        android:id="@+id/etSalarioUpdate"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="42dp"
        android:focusable="true"
        android:hint="@string/novo_salario"
        android:inputType="textPersonName|numberDecimal"
        android:maxLength="15"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescSalario" />

    <TextView
        android:id="@+id/tvDescSalario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:fontFamily="@font/roboto"
        android:text="@string/salario_description"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>