<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingTop="16dp"
    android:paddingEnd="8dp"
    android:paddingBottom="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.fragments.ResumoFragment">

    <TextView
        android:id="@+id/tvTitleAPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/a_pagar"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleJaPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/ja_pago"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <TextView
        android:id="@+id/tvValorJaPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/valor_exemplo"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvTitleJaPago"
        app:layout_constraintTop_toTopOf="@+id/tvTitleJaPago" />

    <TextView
        android:id="@+id/tvValorAPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/valor_exemplo"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvTitleAPagar"
        app:layout_constraintTop_toTopOf="@+id/tvTitleAPagar" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAPagar" />

    <ImageView
        android:id="@+id/ivPigFinance"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/figure_finance_pig"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleJaPago" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ivPigFinance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivPigFinance"
        app:layout_constraintTop_toTopOf="@+id/ivPigFinance">

        <TextView
            android:id="@+id/tvDescSalRestante"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="O seu salário restante é"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvValorSalRestante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/valor_exemplo"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvDescSalRestante"
            app:layout_constraintStart_toStartOf="@+id/tvDescSalRestante"
            app:layout_constraintTop_toBottomOf="@+id/tvDescSalRestante" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>